--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,16 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Template</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="theme-color" content="#fff">
-	<link rel="stylesheet" media="all" href="css/style.css" >
-	<script src="js/app.js"></script>
+	//=include partials/head.html  
+	<title>Index</title>
 </head>
 <body>
 <!-- BEGIN  out-->
 <div class="out">
-	<i class="icon-sepa"></i>
-	//=include partials/partial.html  
+	//=include partials/header.html  
+	<div class="container">
+		<a href="tech.html" target="_blank">tech.html</a>
+	</div>
 </div>
 <!-- END out-->
 </body>
