--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,21 @@
 <!doctype html>
 <html>
 <head>
-	//=include partials/head.html  
+	//=include partials/head.html
 	<title>Index</title>
+	<style>
+		a{
+			display: block;
+		}
+	</style>
 </head>
 <body>
 <!-- BEGIN  out-->
 <div class="out">
-	//=include partials/header.html  
+	//=include partials/header.html
 	<div class="container">
 		<a href="tech.html" target="_blank">tech.html</a>
+		<a href="dislife-text-search.html" target="_blank">dislife-text-search.html</a>
 	</div>
 </div>
 <!-- END out-->
