--- a/src/dislife-text-search.html
+++ b/src/dislife-text-search.html
@@ -9,57 +9,154 @@
 <div class="out">
 	//=include partials/header.html
 	<div class="container">
-		<!-- begin search  -->
-		<form>
-			<label class="search">
-				<button type="send" class="search__btn"><i class="fa fa-search"></i></button>
-				<input type="search" value="Россия">
-			</label>
-		</form>
-		<!-- end search -->
-		<!-- begin filter  -->
-		<div class="filter">
-			<div class="filter__bl">
-				<p class="filter__name">Авторы:</p>
-				<div class="filter__info">
-					<a href="#" class="filter__tag">ИВАН ДАВЫДОВ</a>
-				</div>
-			</div>
-			<div class="filter__bl">
-				<p class="filter__name">Теги:</p>
-				<div class="filter__info">
-					<a href="#" class="filter__tag">ДЕСЯТЬ КОПЕЕК ИВАНА ДАВЫДОВА</a>
-					<a href="#" class="filter__tag">ПЯТЬ КОПЕЕК ИВАНА ДАВЫДОВА</a>
-				</div>
-			</div>
-			<div class="filter__bl">
-				<div class="sort">
-					<span class="sort__tag">Сортировать:</span>
-					<div class="sort__bl">
-						<a href="#" class="sort__tab js-tab">по дате</a>
-						<a href="#" class="sort__tab js-tab is-active">по релевантности</a>
+		<div class="l-center">
+			<!-- begin search  -->
+			<form>
+				<label class="search">
+					<button type="send" class="search__btn"><i class="fa fa-search"></i></button>
+					<input type="search" value="Россия">
+				</label>
+			</form>
+			<!-- end search -->
+			<!-- begin filter  -->
+			<div class="filter">
+				<div class="filter__bl">
+					<p class="filter__name">Авторы:</p>
+					<div class="filter__info">
+						<a href="#" class="filter__tag">ИВАН ДАВЫДОВ</a>
 					</div>
 				</div>
-				<div class="filter__el">
-					<p class="filter__name">Материалы:</p>
-					<div class="filter__info is-normal">
-						<p>Показаны результаты <span class="filter__num">1–50</span> из 1005</p>
+				<div class="filter__bl">
+					<p class="filter__name">Теги:</p>
+					<div class="filter__info">
+						<a href="#" class="filter__tag">ДЕСЯТЬ КОПЕЕК ИВАНА ДАВЫДОВА</a>
+						<a href="#" class="filter__tag">ПЯТЬ КОПЕЕК ИВАНА ДАВЫДОВА</a>
+					</div>
+				</div>
+				<div class="filter__bl">
+					<div class="sort">
+						<span class="sort__tag">Сортировать:</span>
+						<div class="sort__bl">
+							<a href="#" class="sort__tab js-tab">по дате</a>
+							<a href="#" class="sort__tab js-tab is-active">по релевантности</a>
+						</div>
+					</div>
+					<div class="filter__el">
+						<p class="filter__name">Материалы:</p>
+						<div class="filter__info is-normal">
+							<p>Показаны результаты <span class="filter__num">1–50</span> из 1005</p>
+						</div>
 					</div>
 				</div>
 			</div>
+			<!-- end filter -->
+			<!-- begin textbl  -->
+			<a href="#" class="textbl">
+				<div class="textbl__inner">
+					<p class="textbl__ttl">Forbes назвал самые надежные банки <span>России</span></p>
+					<p class="textbl__txt">… Журнал Forbes составил рейтинг самых надежных банков, работающих в <span class="textbl__highlight">России</span>. Он основан на рейтингах международных агентств Fitch, Standard & Poor's и Moody’s, размера капитала и активов кредитных учреждений, рентабельности и других показателях. ...</p>
+					<div class="textbl__tags">
+						<span class="textbl__name textbl_violet">ОБРАЗОВАНИЕ</span>
+						<span class="textbl__author">Ира Соломонова</span>
+						<span class="textbl__date">12 сентября 2014, 19:30</span>
+					</div>
+				</div>
+			</a>
+			<!-- end textbl -->
+			<!-- begin textbl  -->
+			<a href="#" class="textbl">
+				<div class="textbl__img">
+					<img src="img/search-result.jpg" alt="">
+				</div>
+				<div class="textbl__inner">
+					<p class="textbl__ttl">Forbes назвал самые надежные банки <span>России</span></p>
+					<p class="textbl__txt">… Журнал Forbes составил рейтинг самых надежных банков, работающих в <span class="textbl__highlight">России</span>. Он основан на рейтингах международных агентств Fitch, Standard & Poor's и Moody’s, размера капитала и активов кредитных учреждений, рентабельности и других показателях. ...</p>
+					<div class="textbl__tags">
+						<span class="textbl__name textbl_red">Здоровье</span>
+						<span class="textbl__author">Ира Соломонова</span>
+						<span class="textbl__date">12 сентября 2014, 19:30</span>
+					</div>
+				</div>
+			</a>
+			<!-- end textbl -->
+			<!-- begin textbl  -->
+			<a href="#" class="textbl">
+				<div class="textbl__inner">
+					<p class="textbl__ttl">Forbes назвал самые надежные банки <span>России</span></p>
+					<p class="textbl__txt">… Журнал Forbes составил рейтинг самых надежных банков, работающих в <span class="textbl__highlight">России</span>. Он основан на рейтингах международных агентств Fitch, Standard & Poor's и Moody’s, размера капитала и активов кредитных учреждений, рентабельности и других показателях. ...</p>
+					<div class="textbl__tags">
+						<span class="textbl__name textbl_mint">НОВОСТЬ</span>
+						<span class="textbl__author">Ира Соломонова</span>
+						<span class="textbl__date">12 сентября 2014, 19:30</span>
+					</div>
+				</div>
+			</a>
+			<!-- end textbl -->
+			<!-- begin textbl  -->
+			<a href="#" class="textbl textbl_no-border">
+				<div class="textbl__inner">
+					<p class="textbl__ttl">Forbes назвал самые надежные банки <span>России</span></p>
+					<p class="textbl__txt">… Журнал Forbes составил рейтинг самых надежных банков, работающих в <span class="textbl__highlight">России</span>. Он основан на рейтингах международных агентств Fitch, Standard & Poor's и Moody’s, размера капитала и активов кредитных учреждений, рентабельности и других показателях. ...</p>
+					<div class="textbl__tags">
+						<span class="textbl__name textbl_red">Здоровье</span>
+						<span class="textbl__author">Ира Соломонова</span>
+						<span class="textbl__date">12 сентября 2014, 19:30</span>
+					</div>
+				</div>
+			</a>
+			<!-- end textbl -->
 		</div>
-		<!-- end filter -->
-		<!-- begin textbl  -->
-		<div class="textbl">
-			<div class="textbl__img">
-				<img src="img/search-result.jpg" alt="">
-			</div>
-			<div class="textbl__inner">
-				<p class="textbl__ttl">Forbes назвал самые надежные банки <span>России</span></p>
-			</div>
-		</div>
-		<!-- end textbl -->
 	</div>
+	<!-- begin more  -->
+	<div class="more">
+		<div class="container">
+			<h2 class="h2">Узнать больше</h2>
+			<div class="row">
+				<div class="col-s">
+					<!-- begin item  -->
+					<div class="item">
+						<a href="#" class="btn btn_violet">Образование</a>
+						<a href="#" class="item__img" style="background-image: url(img/item.jpg)"></a>
+						<div class="item__txt">
+							<p class="item__author">Ира Соломонова</p>
+							<p>Подготовить особенных детей к жизни в обычном мире</p>
+						</div>
+					</div>
+					<!-- end item -->
+				</div>
+				<div class="col-s">
+					<!-- begin item  -->
+					<div class="item">
+						<a href="#" class="btn btn_violet">Образование</a>
+						<a href="#" class="item__img" style="background-image: url(img/item2.jpg)"></a>
+						<div class="item__txt">
+							<p class="item__author">Ира Соломонова</p>
+							<p>В этой школе учатся все</p>
+						</div>
+					</div>
+					<!-- end item -->
+				</div>
+				<div class="col-s">
+					<!-- begin item  -->
+					<div class="item item_gold item_mod">
+						<a href="#" class="btn btn_gold">Маленькая политика</a>
+						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+							<div class="item__title">
+								<p class="item__author">Ира Соломонова</p>
+								<p class="item__name">Дети Гольяново</p>
+							</div>
+						</a>
+						<div class="item__txt">
+							<a href="#" class="item__link">Инструкция</a>
+							<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+						</div>
+					</div>
+					<!-- end item -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end more -->
 </div>
 <!-- END out-->
 </body>
