dislife-news added

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 	<div class="container">
 		<a href="tech.html" target="_blank">tech.html</a>
 		<a href="dislife-text-search.html" target="_blank">dislife-text-search.html</a>
+		<a href="dislife-news.html" target="_blank">dislife-news.html</a>
 	</div>
 </div>
 <!-- END out-->
