--- a/src/dislife-text-search.html
+++ b/src/dislife-text-search.html
@@ -107,56 +107,7 @@
 			<!-- end textbl -->
 		</div>
 	</div>
-	<!-- begin more  -->
-	<div class="more">
-		<div class="container">
-			<h2 class="h2">Узнать больше</h2>
-			<div class="row">
-				<div class="col-s">
-					<!-- begin item  -->
-					<div class="item">
-						<a href="#" class="btn btn_violet">Образование</a>
-						<a href="#" class="item__img" style="background-image: url(img/item.jpg)"></a>
-						<div class="item__txt">
-							<p class="item__author">Ира Соломонова</p>
-							<p>Подготовить особенных детей к жизни в обычном мире</p>
-						</div>
-					</div>
-					<!-- end item -->
-				</div>
-				<div class="col-s">
-					<!-- begin item  -->
-					<div class="item">
-						<a href="#" class="btn btn_violet">Образование</a>
-						<a href="#" class="item__img" style="background-image: url(img/item2.jpg)"></a>
-						<div class="item__txt">
-							<p class="item__author">Ира Соломонова</p>
-							<p>В этой школе учатся все</p>
-						</div>
-					</div>
-					<!-- end item -->
-				</div>
-				<div class="col-s">
-					<!-- begin item  -->
-					<div class="item item_gold item_mod">
-						<a href="#" class="btn btn_gold">Маленькая политика</a>
-						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
-							<div class="item__title">
-								<p class="item__author">Ира Соломонова</p>
-								<p class="item__name">Дети Гольяново</p>
-							</div>
-						</a>
-						<div class="item__txt">
-							<a href="#" class="item__link">Инструкция</a>
-							<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
-						</div>
-					</div>
-					<!-- end item -->
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end more -->
+	//=include partials/more.html
 </div>
 <!-- END out-->
 </body>
