--- a/src/tech.html
+++ b/src/tech.html
@@ -22,6 +22,7 @@
 			<a href="#" class="btn btn_orange">Спецпроекты</a>
 		</div>
 	</div>
+	//=include partials/more.html
 </div>
 <!-- END out-->
 </body>
