--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -8,7 +8,21 @@
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html
-	<div class="container">
+	<div class="container main">
+		<div class="main__row">
+			<div class="main__content"></div>
+			<div class="main__sidebar">
+				<div class="social">
+					<div class="social__title">Кто мы такие?</div>
+					<ul class="social__list">
+						<li><a href="https://www.facebook.com/disliferu/" class="is-fb"><i class="fa fa-facebook"></i></a></li>
+						<li><a href="https://vk.com/dislife_ru" class="is-tw"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="http://ok.ru/group/53804676219108" class="is-vk"><i class="fa fa-vk"></i></a></li>
+						<li><a href="https://twitter.com/DislifeRu" class="is-od"><i class="fa fa-odnoklassniki"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
 	//=include partials/footer.html
 </div>
