--- a/src/dislife-text-search.html
+++ b/src/dislife-text-search.html
@@ -8,7 +8,7 @@
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html
-	<div class="container">
+	<div class="container container_search">
 		<div class="l-center">
 			<!-- begin search  -->
 			<form>
@@ -108,6 +108,7 @@
 		</div>
 	</div>
 	//=include partials/more.html
+	//=include partials/footer.html
 </div>
 <!-- END out-->
 </body>
