--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -9,9 +9,9 @@
 <div class="out">
 	//=include partials/header.html
 	<div class="container main">
-		<div class="main__row">
-			<div class="main__content"></div>
-			<div class="main__sidebar">
+		<div class="row">
+			<div class="col-big"></div>
+			<div class="col-sm">
 				<div class="social">
 					<div class="social__title">Кто мы такие?</div>
 					<ul class="social__list">
@@ -21,10 +21,94 @@
 						<li><a href="https://twitter.com/DislifeRu" class="is-od"><i class="fa fa-odnoklassniki"></i></a></li>
 					</ul>
 				</div>
+				<div class="banner-img">
+					<a href="#">
+						<img src="img/banner.jpg" alt="banner">
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-s"></div>
+			<div class="col-s">
+				<div class="news-main">
+					<div class="news-main__title"><i class="fa fa-rss"></i>ПОСЛЕДНИЕ НОВОСТИ</div>
+					<ul class="news-main__list">
+						<li class="news-item">
+							<div class="news-item__title">Правительство не вернет сигарет</div>
+							<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+						</li>
+						<li class="news-item">
+							<div class="news-item__title">Правительство не вернет сигарет</div>
+							<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
+							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+						</li>
+						<li class="news-item">
+							<div class="news-item__title">Правительство не вернет сигарет</div>
+							<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+						</li>
+						<li class="news-item">
+							<div class="news-item__title">Правительство не вернет сигарет</div>
+							<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+						</li>
+						<li class="news-item">
+							<div class="news-item__title">Правительство не вернет сигарет</div>
+							<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
+							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+						</li>
+						<li class="news-item">
+							<div class="news-item__title">Правительство не вернет сигарет</div>
+							<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+						</li>
+						<li class="news-item">
+							<div class="news-item__title">Правительство не вернет сигарет</div>
+							<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
+							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+						</li>
+						<li class="news-item">
+							<div class="news-item__title">Правительство не вернет сигарет</div>
+							<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+						</li>
+					</ul>
+					<a href="#" class="news-main__link">Все новости<i class="fa fa-angle-right"></i></a>
+				</div>
+			</div>
+			<div class="col-s"></div>
+		</div>
+		<div class="item-lg" style="background-image: url(img/bitmap.jpg);">
+			<a href="#" class="btn btn_gold">Образование</a>
+			<div class="item-lg__in">
+				<div class="item-lg__box">
+					<div class="item-lg__title">Государство мам</div>
+					<p>Для кого-то это просто странные и непонятные слова. Для знающих — названия страшных болезней. Для врачей — вызов. Для чиновников — обуза. Для мам детей, страдающих этими неизлечимыми заболеваниями, — это слова-враги и слова-спутники</p>
+				</div>
+				<div class="item-lg__slider">
+					<div class="slider">
+						<div class="slider__in">
+							<div class="slide">
+								<div class="slide__title">«Если было нужно, я кидалась табуретками в медсестер»</div>
+								<div class="slide__line"><span></span></div>
+								<div class="slide__author">
+									<div class="slide__img">
+										<img src="img/man-o.png" alt="">
+									</div>
+									<div class="slide__name">Наталия Кудрявцева</div>
+								</div>
+							</div>
+						</div>
+						<button class="slider__prev"><i class="fa fa-angle-left"></i></button>
+						<button class="slider__next"><i class="fa fa-angle-right"></i></button>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-	//=include partials/footer.html
+	//=include partials/footer.html 
 </div>
 <!-- END out-->
 </body>
