--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -89,7 +89,47 @@
 				</div>
 				<div class="item-lg__slider">
 					<div class="slider">
-						<div class="slider__in">
+						<div class="slider__in js-slider">
+							<div class="slide">
+								<div class="slide__title">«Если было нужно, я кидалась табуретками в медсестер»</div>
+								<div class="slide__line"><span></span></div>
+								<div class="slide__author">
+									<div class="slide__img">
+										<img src="img/man-o.png" alt="">
+									</div>
+									<div class="slide__name">Наталия Кудрявцева</div>
+								</div>
+							</div>
+							<div class="slide">
+								<div class="slide__title">Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
+								<div class="slide__line"><span></span></div>
+								<div class="slide__author">
+									<div class="slide__img">
+										<img src="img/man-o.png" alt="">
+									</div>
+									<div class="slide__name">Наталия Кудрявцева</div>
+								</div>
+							</div>
+							<div class="slide">
+								<div class="slide__title">«Если было нужно, я кидалась табуретками в медсестер»</div>
+								<div class="slide__line"><span></span></div>
+								<div class="slide__author">
+									<div class="slide__img">
+										<img src="img/man-o.png" alt="">
+									</div>
+									<div class="slide__name">Наталия Кудрявцева</div>
+								</div>
+							</div>
+							<div class="slide">
+								<div class="slide__title">Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
+								<div class="slide__line"><span></span></div>
+								<div class="slide__author">
+									<div class="slide__img">
+										<img src="img/man-o.png" alt="">
+									</div>
+									<div class="slide__name">Наталия Кудрявцева</div>
+								</div>
+							</div>
 							<div class="slide">
 								<div class="slide__title">«Если было нужно, я кидалась табуретками в медсестер»</div>
 								<div class="slide__line"><span></span></div>
@@ -101,8 +141,8 @@
 								</div>
 							</div>
 						</div>
-						<button class="slider__prev"><i class="fa fa-angle-left"></i></button>
-						<button class="slider__next"><i class="fa fa-angle-right"></i></button>
+						<button class="slider__prev js-slider-prev"><i class="fa fa-angle-left"></i></button>
+						<button class="slider__next js-slider-next"><i class="fa fa-angle-right"></i></button>
 					</div>
 				</div>
 			</div>
