--- a/src/dislife-text.html
+++ b/src/dislife-text.html
@@ -8,17 +8,11 @@
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html
-	<div class="container">
+	<div class="container container_news">
 		<div class="l-news">
 			<!-- BEGIN l-col1  -->
 			<div class="l-col1">
-				<div class="news-body soc-wrapper">
-					<ul class="soc-v">
-						<li><a href="#" class="fa fa-facebook"></a></li>
-						<li><a href="#" class="fa fa-twitter"></a></li>
-						<li><a href="#" class="icon-vk"></a></li>
-						<li><a href="#" class="fa fa-envelope"></a></li>
-					</ul>
+				<div class="news-body">
 					<!-- BEGIN news-line  -->
 					<div class="news-line">
 						<a href="#" class="btn btn_violet btn_bd">Образование</a>
@@ -98,75 +92,73 @@
 			<!-- END l-col1 -->
 			<!-- BEGIN l-col2  -->
 			<div class="l-col2">
-				<!-- BEGIN sidepanel  -->
-				 <aside class="sidepanel">
-					<div class="banner-img">
-						<a href="#">
-							<img src="img/banner.jpg" alt="banner">
-						</a>
-					</div>
-					<div class="section-title">ПОСЛЕДНИЕ НОВОСТИ</div>
-					<!-- BEGIN news-sm  -->
-					 <div class="item-sm">
-						<a href="#">
-							<div class="text-big text-big_md">Винтики мировой державы</div>
-							<p>Росмолодежь попросила удвоить финансирование ради кремлевских лагерей&nbsp;<span class="meta">29 ОКТЯБРЯ, 20:27</span></p>
-						</a>
-					 </div>
-					<!-- END news-sm -->
-					<!-- BEGIN news-sm  -->
-					 <div class="item-sm">
-						<a href="#">
-							<div class="text-big text-big_md">Снегопад нарушил работу московских аэропортов</div>
-							<p>Первый обильный снегопад в Москве этой осенью привел к перебоям в работе столичных аэропортов. Синоптики прогнозируют, что снег будет идти несколько дней&nbsp;<span class="meta">29 ОКТЯБРЯ, 20:27</span></p>
-						</a>
-					 </div>
-					<!-- END news-sm -->
-					<!-- BEGIN news-sm  -->
-					 <div class="item-sm">
-						<a href="#">
-							<div class="text-big text-big_md">В британском правительстве допустили взрыв бомбы на борту А321</div>
-							<p>Кроме того, временно отложены рейсы, следующие из Шарм-эль-Шейха в Великобританию, запланированные на вечер 4 ноября.&nbsp;<span class="meta">29 ОКТЯБРЯ, 20:27</span></p>
-						</a>
-					 </div>
-					<!-- END news-sm -->
-				 </aside>
-				<!-- END sidepanel -->
-
+				<div class="banner-img">
+					<a href="#">
+						<img src="img/banner.jpg" alt="banner">
+					</a>
+				</div>
+				<div class="section-title">ПОСЛЕДНИЕ НОВОСТИ</div>
+				<!-- BEGIN news-sm  -->
+				 <div class="item-sm">
+					<a href="#">
+						<div class="text-big text-big_md">Винтики мировой державы</div>
+						<p>Росмолодежь попросила удвоить финансирование ради кремлевских лагерей&nbsp;<span class="meta">29 ОКТЯБРЯ, 20:27</span></p>
+					</a>
+				 </div>
+				<!-- END news-sm -->
+				<!-- BEGIN news-sm  -->
+				 <div class="item-sm">
+					<a href="#">
+						<div class="text-big text-big_md">Снегопад нарушил работу московских аэропортов</div>
+						<p>Первый обильный снегопад в Москве этой осенью привел к перебоям в работе столичных аэропортов. Синоптики прогнозируют, что снег будет идти несколько дней&nbsp;<span class="meta">29 ОКТЯБРЯ, 20:27</span></p>
+					</a>
+				 </div>
+				<!-- END news-sm -->
+				<!-- BEGIN news-sm  -->
+				 <div class="item-sm">
+					<a href="#">
+						<div class="text-big text-big_md">В британском правительстве допустили взрыв бомбы на борту А321</div>
+						<p>Кроме того, временно отложены рейсы, следующие из Шарм-эль-Шейха в Великобританию, запланированные на вечер 4 ноября.&nbsp;<span class="meta">29 ОКТЯБРЯ, 20:27</span></p>
+					</a>
+				 </div>
+				<!-- END news-sm -->
 			</div>
 			<!-- BEGIN l-col2  -->
+			<ul class="soc-v">
+				<li><a href="#" class="fa fa-facebook"></a></li>
+				<li><a href="#" class="fa fa-twitter"></a></li>
+				<li><a href="#" class="icon-vk"></a></li>
+				<li><a href="#" class="fa fa-envelope"></a></li>
+			</ul>
 		</div>
 		<div class="divider"></div>
 		<div class="l-news">
 			<div class="l-col1">
-				<div class="soc-wrapper">
-					<!-- BEGIN subscribe  -->
-					 <div class="subscribe">
-						<div class="text-big">Подпишитесь на еженедельную рассылку:</div>
-						<form action="#">
-							<div class="subscribe__field">
-								<input type="submit" class="button" value="Подписаться">
-								<div class="subscribe__input">
-									<i class="fa fa-envelope-o"></i>
-									<input type="email" placeholder="Ваш e-mail" name="email" required>
-								</div>
+				<!-- BEGIN subscribe  -->
+				 <div class="subscribe">
+					<div class="text-big">Подпишитесь на еженедельную рассылку:</div>
+					<form action="#">
+						<div class="subscribe__field">
+							<input type="submit" class="button" value="Подписаться">
+							<div class="subscribe__input">
+								<i class="fa fa-envelope-o"></i>
+								<input type="email" placeholder="Ваш e-mail" name="email" required>
 							</div>
-						</form>
-					 </div>
-					<!-- END subscribe -->
-				</div>
+						</div>
+					</form>
+				 </div>
+				<!-- END subscribe -->
 			</div>
 		</div>
 		<div class="divider"></div>
 		<div class="l-news">
 			<div class="l-col1">
-				<div class="soc-wrapper">
-					<img src="img/disqus.jpg" alt="">
-				</div>
+				<img class="disqus" src="img/disqus.jpg" alt="">
 			</div>
 		</div>
 	</div>
 	//=include partials/more.html
+	//=include partials/footer.html
 </div>
 <!-- END out-->
 </body>
