--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -35,44 +35,60 @@
 					<div class="news-main__title"><i class="fa fa-rss"></i>ПОСЛЕДНИЕ НОВОСТИ</div>
 					<ul class="news-main__list">
 						<li class="news-item">
-							<div class="news-item__title">Правительство не вернет сигарет</div>
-							<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							<a href="#" class="news-item__link">
+								<div class="news-item__title">Правительство не вернет сигарет</div>
+								<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							</a>
 						</li>
 						<li class="news-item">
-							<div class="news-item__title">Правительство не вернет сигарет</div>
-							<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
-							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							<a href="#" class="news-item__link">
+								<div class="news-item__title">Правительство не вернет сигарет</div>
+								<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							</a>
 						</li>
 						<li class="news-item">
-							<div class="news-item__title">Правительство не вернет сигарет</div>
-							<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							<a href="#" class="news-item__link">
+								<div class="news-item__title">Правительство не вернет сигарет</div>
+								<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							</a>
 						</li>
 						<li class="news-item">
-							<div class="news-item__title">Правительство не вернет сигарет</div>
-							<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							<a href="#" class="news-item__link">
+								<div class="news-item__title">Правительство не вернет сигарет</div>
+								<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							</a>
 						</li>
 						<li class="news-item">
-							<div class="news-item__title">Правительство не вернет сигарет</div>
-							<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
-							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							<a href="#" class="news-item__link">
+								<div class="news-item__title">Правительство не вернет сигарет</div>
+								<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
+								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							</a>
 						</li>
 						<li class="news-item">
-							<div class="news-item__title">Правительство не вернет сигарет</div>
-							<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							<a href="#" class="news-item__link">
+								<div class="news-item__title">Правительство не вернет сигарет</div>
+								<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							</a>
 						</li>
 						<li class="news-item">
-							<div class="news-item__title">Правительство не вернет сигарет</div>
-							<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
-							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							<a href="#" class="news-item__link">
+								<div class="news-item__title">Правительство не вернет сигарет</div>
+								<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
+								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							</a>
 						</li>
 						<li class="news-item">
-							<div class="news-item__title">Правительство не вернет сигарет</div>
-							<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-							<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							<a href="#" class="news-item__link">
+								<div class="news-item__title">Правительство не вернет сигарет</div>
+								<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
+								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+							</a>
 						</li>
 					</ul>
 					<a href="#" class="news-main__link">Все новости<i class="fa fa-angle-right"></i></a>
@@ -145,6 +161,17 @@
 						<button class="slider__next js-slider-next"><i class="fa fa-angle-right"></i></button>
 					</div>
 				</div>
+			</div>
+		</div>
+	</div>
+	<div class="load-more">
+		<button class="btn-load">
+			<i class="fa fa-repeat"></i>
+			<span>Загрузить еще</span>
+		</button>
+		<div class="container main">
+			<div class="item-banner">
+				<div class="item-banner__left"></div>
 			</div>
 		</div>
 	</div>
