--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -184,8 +184,17 @@
 						</div>
 					</a>
 				</div>
-				<blockquote class="blockquote">
-					
+				<blockquote class="blockquote blockquote_red">
+					<a href="#" class="btn btn_red">Здоровье</a>
+					<a href="#" class="blockquote__link">
+						<div class="blockquote__info">
+							<div>Наталья Семенова,</div>
+							<div>детский психолог:</div>
+						</div>
+						<div class="blockquote__text">
+							<p>Даже если у вас вся семья — талантливые математики, а у ребенка-первоклассника не складывается с цифрами и плохо с логикой, то это повод для выбора простой программы и не повод по факту рождения записывать своих детей в математический лицей</p>
+						</div>
+					</a>
 				</blockquote>
 				<div class="item item_violet">
 					<a href="#" class="btn btn_violet">Образование</a>
@@ -278,6 +287,63 @@
 		<div class="container main">
 			<div class="item-banner">
 				<div class="item-banner__left"></div>
+			</div>
+			<div class="row">
+				<div class="col-sm">
+					<!-- begin item  -->
+					<div class="item item_orange">
+						<a href="#" class="btn btn_orange">Спецпроекты</a>
+						<a href="#" class="item__in">
+							<div class="item__img" style="background-image: url(img/item.jpg)"></div>
+							<div class="item__txt">
+								<div class="item__txt-in">
+									<p class="item__author">Ира Соломонова</p>
+									<p class="item__subtitle">Подготовить особенных детей к жизни в обычном мире</p>
+									<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+								</div>
+							</div>
+						</a>
+					</div>
+					<!-- end item -->
+				</div>
+				<div class="col-sm">
+					<!-- begin item  -->
+					<div class="item item_orange">
+						<a href="#" class="btn btn_orange">Спецпроекты</a>
+						<a href="#" class="item__in">
+							<div class="item__img" style="background-image: url(img/item2.jpg)"></div>
+							<div class="item__txt">
+								<div class="item__txt-in">
+									<p class="item__author">Ира Соломонова</p>
+									<p class="item__subtitle">В этой школе учатся все</p>
+									<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+								</div>
+							</div>
+						</a>
+					</div>
+					<!-- end item -->
+				</div>
+				<div class="col-sm">
+					<!-- begin item  -->
+					<div class="item iteorange item_mod">
+						<a href="#" class="btn btorange">Спецпроекты</a>
+						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+							<div class="item__title">
+								<p class="item__author">Ира Соломонова</p>
+								<p class="item__subtitle">Дети Гольяново</p>
+								<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+							</div>
+							<span class="item__arr"></span>
+						</a>
+						<a href="#" class="item__txt">
+							<div class="item__txt-in">
+								<p class="item__instruction">Инструкция</p>
+								<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+							</div>
+						</a>
+					</div>
+					<!-- end item -->
+				</div>
 			</div>
 		</div>
 	</div>
