--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -325,8 +325,8 @@
 				</div>
 				<div class="col-sm">
 					<!-- begin item  -->
-					<div class="item iteorange item_mod">
-						<a href="#" class="btn btorange">Спецпроекты</a>
+					<div class="item item_orange item_mod">
+						<a href="#" class="btn btn_orange">Спецпроекты</a>
 						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
 							<div class="item__title">
 								<p class="item__author">Ира Соломонова</p>
