--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 	//=include partials/header.html
 	<div class="container">
 		<a href="tech.html" target="_blank">tech.html</a>
+		<a href="dislife-main.html" target="_blank">dislife-main.html</a>
 		<a href="dislife-text-search.html" target="_blank">dislife-text-search.html</a>
 		<a href="dislife-news.html" target="_blank">dislife-news.html</a>
 		<a href="dislife-text.html" target="_blank">dislife-text.html</a>
