--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -285,64 +285,249 @@
 			<span>Загрузить еще</span>
 		</button>
 		<div class="container main">
-			<div class="item-banner">
-				<div class="item-banner__left"></div>
+			<div class="load-more__section">
+				<div class="item-banner item-banner_blue" style="background-image: url(img/patronus-big.jpg);">
+					<a href="#" class="btn btn_orange">Спецпроекты</a> 
+					<div class="item-banner__left">
+						<div class="item-banner__left-in">
+							<div class="item-banner__title">ПАТРОНУС</div>
+							<div class="item-banner__subtitle">Детский правозащитный проект</div>
+							<p>Мы добиваемся жилья для сирот, лечения для больных, справедливости для обиженных. Мы добиваемся соблюдения  хороших законов и изменения плохих</p>
+							<a href="#" class="item-banner__btn">Написать обращение</a>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="load-more__title">УЗНАТЬ БОЛЬШЕ</div>
+					<div class="col-sm">
+						<!-- begin item  -->
+						<div class="item item_orange">
+							<a href="#" class="btn btn_orange">Спецпроекты</a> 
+							<a href="#" class="item__in">
+								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
+								<div class="item__txt">
+									<div class="item__txt-in">
+										<p class="item__author">Ира Соломонова</p>
+										<p class="item__subtitle">Подготовить особенных детей к жизни в обычном мире</p>
+										<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>
+					<div class="col-sm">
+						<!-- begin item  -->
+						<div class="item item_orange">
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
+							<a href="#" class="item__in">
+								<div class="item__img" style="background-image: url(img/item2.jpg)"></div>
+								<div class="item__txt">
+									<div class="item__txt-in">
+										<p class="item__author">Ира Соломонова</p>
+										<p class="item__subtitle">В этой школе учатся все</p>
+										<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>
+					<div class="col-sm">
+						<!-- begin item  -->
+						<div class="item item_orange item_mod">
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
+							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+								<div class="item__title">
+									<p class="item__author">Ира Соломонова</p>
+									<p class="item__subtitle">Дети Гольяново</p>
+									<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+								</div>
+								<span class="item__arr"></span>
+							</a>
+							<a href="#" class="item__txt">
+								<div class="item__txt-in">
+									<p class="item__instruction">Инструкция</p>
+									<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>
+				</div>
 			</div>
-			<div class="row">
-				<div class="col-sm">
-					<!-- begin item  -->
-					<div class="item item_orange">
-						<a href="#" class="btn btn_orange">Спецпроекты</a> 
-						<a href="#" class="item__in">
-							<div class="item__img" style="background-image: url(img/item.jpg)"></div>
-							<div class="item__txt">
-								<div class="item__txt-in">
+			<div class="load-more__section">
+				<div class="item-image" style="background-image: url(img/nogi.jpg);">
+					<a href="#" class="btn btn_orange">Спецпроекты</a> 
+					<form class="box-form">
+						<div class="box-form__title">Пазлы</div>
+						<div class="box-form__subtitle">Знакомства для людей с ограниченными возможностями</div>
+						<div class="box-form__field">
+							<div class="select js-select">
+								<div class="select__text js-select-text">Возраст</div>
+								<i class="fa fa-angle-down"></i>
+								<select>
+									<option value="Возраст">Возраст</option>
+									<option value="Возраст1">Возраст1</option>
+									<option value="Возраст2">Возраст2</option>
+								</select>
+							</div>
+						</div>
+						<div class="box-form__field">
+							<div class="select js-select">
+								<div class="select__text js-select-text">Пол</div>
+								<i class="fa fa-angle-down"></i>
+								<select>
+									<option value="Пол">Пол</option>
+									<option value="Пол1">Пол1</option>
+									<option value="Пол2">Пол2</option>
+								</select>
+							</div>
+						</div>
+						<div class="box-form__field">
+							<div class="select js-select">
+								<div class="select__text js-select-text">Город</div>
+								<i class="fa fa-angle-down"></i>
+								<select>
+									<option value="Город">Город</option>
+									<option value="Город1">Город1</option>
+									<option value="Город2">Город2</option>
+								</select>
+							</div>
+						</div>
+						<div class="box-form__bottom">
+							<button class="box-form__btn">Найти</button>
+							<p><a href="#">Расширенный поиск</a></p>
+						</div>
+					</form>
+				</div>
+				<div class="row">
+					<div class="load-more__title">УЗНАТЬ БОЛЬШЕ</div>
+					<div class="col-sm">
+						<!-- begin item  -->
+						<div class="item item_orange">
+							<a href="#" class="btn btn_orange">Спецпроекты</a> 
+							<a href="#" class="item__in">
+								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
+								<div class="item__txt">
+									<div class="item__txt-in">
+										<p class="item__author">Ира Соломонова</p>
+										<p class="item__subtitle">Подготовить особенных детей к жизни в обычном мире</p>
+										<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>
+					<div class="col-sm">
+						<!-- begin item  -->
+						<div class="item item_orange">
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
+							<a href="#" class="item__in">
+								<div class="item__img" style="background-image: url(img/item2.jpg)"></div>
+								<div class="item__txt">
+									<div class="item__txt-in">
+										<p class="item__author">Ира Соломонова</p>
+										<p class="item__subtitle">В этой школе учатся все</p>
+										<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>
+					<div class="col-sm">
+						<!-- begin item  -->
+						<div class="item item_orange item_mod">
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
+							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+								<div class="item__title">
 									<p class="item__author">Ира Соломонова</p>
-									<p class="item__subtitle">Подготовить особенных детей к жизни в обычном мире</p>
+									<p class="item__subtitle">Дети Гольяново</p>
 									<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
 								</div>
-							</div>
-						</a>
-					</div>
-					<!-- end item -->
-				</div>
-				<div class="col-sm">
-					<!-- begin item  -->
-					<div class="item item_orange">
-						<a href="#" class="btn btn_orange">Спецпроекты</a>
-						<a href="#" class="item__in">
-							<div class="item__img" style="background-image: url(img/item2.jpg)"></div>
-							<div class="item__txt">
+								<span class="item__arr"></span>
+							</a>
+							<a href="#" class="item__txt">
 								<div class="item__txt-in">
+									<p class="item__instruction">Инструкция</p>
+									<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>
+				</div>
+			</div>
+			<div class="load-more__section">
+				<div class="item-banner item-banner_yellow" style="background-image: url(img/bitmap2.jpg);">
+					<a href="#" class="btn btn_orange">Спецпроекты</a> 
+					<div class="item-banner__left">
+						<div class="item-banner__left-in">
+							<div class="item-banner__title_mod">Бюро справедливости</div>
+							<p>Сергей Миронов помогает Dislife.ru добиться справедливости, когда законы демонстрируют ее отсутствие</p>
+							<a href="#" class="item-banner__btn item-banner__btn_full">Написать обращение</a>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="load-more__title">УЗНАТЬ БОЛЬШЕ</div>
+					<div class="col-sm">
+						<!-- begin item  -->
+						<div class="item item_orange">
+							<a href="#" class="btn btn_orange">Спецпроекты</a> 
+							<a href="#" class="item__in">
+								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
+								<div class="item__txt">
+									<div class="item__txt-in">
+										<p class="item__author">Ира Соломонова</p>
+										<p class="item__subtitle">Подготовить особенных детей к жизни в обычном мире</p>
+										<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>
+					<div class="col-sm">
+						<!-- begin item  -->
+						<div class="item item_orange">
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
+							<a href="#" class="item__in">
+								<div class="item__img" style="background-image: url(img/item2.jpg)"></div>
+								<div class="item__txt">
+									<div class="item__txt-in">
+										<p class="item__author">Ира Соломонова</p>
+										<p class="item__subtitle">В этой школе учатся все</p>
+										<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+									</div>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
+					</div>
+					<div class="col-sm">
+						<!-- begin item  -->
+						<div class="item item_orange item_mod">
+							<a href="#" class="btn btn_orange">Спецпроекты</a>
+							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
+								<div class="item__title">
 									<p class="item__author">Ира Соломонова</p>
-									<p class="item__subtitle">В этой школе учатся все</p>
+									<p class="item__subtitle">Дети Гольяново</p>
 									<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
 								</div>
-							</div>
-						</a>
+								<span class="item__arr"></span>
+							</a>
+							<a href="#" class="item__txt">
+								<div class="item__txt-in">
+									<p class="item__instruction">Инструкция</p>
+									<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
+								</div>
+							</a>
+						</div>
+						<!-- end item -->
 					</div>
-					<!-- end item -->
-				</div>
-				<div class="col-sm">
-					<!-- begin item  -->
-					<div class="item item_orange item_mod">
-						<a href="#" class="btn btn_orange">Спецпроекты</a>
-						<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
-							<div class="item__title">
-								<p class="item__author">Ира Соломонова</p>
-								<p class="item__subtitle">Дети Гольяново</p>
-								<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
-							</div>
-							<span class="item__arr"></span>
-						</a>
-						<a href="#" class="item__txt">
-							<div class="item__txt-in">
-								<p class="item__instruction">Инструкция</p>
-								<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
-							</div>
-						</a>
-					</div>
-					<!-- end item -->
 				</div>
 			</div>
 		</div>
