--- a/src/dislife-instruction-simple.html
+++ b/src/dislife-instruction-simple.html
@@ -8,7 +8,7 @@
 <!-- BEGIN  out-->
 <div class="out">
 	//=include partials/header.html
-	<div class="container container_news container_bg-gray">
+	<div class="container container_news">
 		<div class="l-news">
 			<!-- BEGIN l-col1  -->
 			<div class="l-col1">
@@ -66,7 +66,7 @@
 							<i class="fa fa-download"></i>
 							<span>скачать подробный алгоритм</span>
 						</a>
-						<div class="footnote footnote_mod">
+						<div class="note note_mod">
 							<p>Подготовил <span>Максим Бурмицкий,</span> практикующий юрист, правовой эксперт Совета при Президенте РФ по развитию гражданского общества и правам человека</p>
 						</div>
 					</article>
@@ -115,8 +115,7 @@
 				<li><a href="#" class="fa fa-envelope"></a></li>
 			</ul>
 		</div>
-		<div class="divider"></div>
-		<div class="l-news">
+		<div class="l-news l-news_border">
 			<div class="l-col1">
 				<!-- BEGIN subscribe  -->
 				<div class="subscribe subscribe_mod">
@@ -130,7 +129,6 @@
 				<!-- END subscribe -->
 			</div>
 		</div>
-		<div class="divider"></div>
 		<div class="l-news">
 			<div class="l-col1">
 				<img class="disqus" src="img/disqus.jpg" alt="">
