--- a/src/dislife-news.html
+++ b/src/dislife-news.html
@@ -91,8 +91,7 @@
 				<li><a href="#" class="fa fa-envelope"></a></li>
 			</ul>
 		</div>
-		<div class="divider"></div>
-		<div class="l-news">
+		<div class="l-news l-news_border">
 			<div class="l-col1">
 				<!-- BEGIN subscribe  -->
 				<div class="subscribe subscribe_mod">
@@ -106,7 +105,6 @@
 				<!-- END subscribe -->
 			</div>
 		</div>
-		<div class="divider"></div>
 		<div class="l-news">
 			<div class="l-col1">
 				<img class="disqus" src="img/disqus.jpg" alt="">
