--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -366,6 +366,11 @@
 							<div class="select js-select">
 								<div class="select__text js-select-text">Возраст</div>
 								<i class="fa fa-angle-down"></i>
+								<ul class="select__list js-select-list">
+									<li data-val="Возраст">Возраст</li>
+									<li data-val="Возраст1">Возраст1</li>
+									<li data-val="Возраст2">Возраст2</li>
+								</ul>
 								<select>
 									<option value="Возраст">Возраст</option>
 									<option value="Возраст1">Возраст1</option>
@@ -377,6 +382,11 @@
 							<div class="select js-select">
 								<div class="select__text js-select-text">Пол</div>
 								<i class="fa fa-angle-down"></i>
+								<ul class="select__list js-select-list">
+									<li data-val="Пол">Пол</li>
+									<li data-val="Пол1">Пол1</li>
+									<li data-val="Пол2">Пол2</li>
+								</ul>
 								<select>
 									<option value="Пол">Пол</option>
 									<option value="Пол1">Пол1</option>
@@ -388,10 +398,19 @@
 							<div class="select js-select">
 								<div class="select__text js-select-text">Город</div>
 								<i class="fa fa-angle-down"></i>
+								<ul class="select__list js-select-list">
+									<li data-val="Город">Город</li>
+									<li data-val="Город1">Город1</li>
+									<li data-val="Город2">Город2</li>
+									<li data-val="Город3">Город3</li>
+									<li data-val="Город4">Город4</li>
+								</ul>
 								<select>
 									<option value="Город">Город</option>
 									<option value="Город1">Город1</option>
 									<option value="Город2">Город2</option>
+									<option value="Город3">Город3</option>
+									<option value="Город4">Город4</option>
 								</select>
 							</div>
 						</div>
