--- a/src/dislife-main.html
+++ b/src/dislife-main.html
@@ -113,57 +113,73 @@
 						<li class="news-item">
 							<a href="#" class="news-item__link">
 								<div class="news-item__title">Правительство не вернет сигарет</div>
-								<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								<div class="news-item__info">
+									<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+									<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								</div>
 							</a>
 						</li>
 						<li class="news-item">
 							<a href="#" class="news-item__link">
 								<div class="news-item__title">Правительство не вернет сигарет</div>
-								<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								<div class="news-item__info">
+									<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+									<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								</div>
 							</a>
 						</li>
 						<li class="news-item">
 							<a href="#" class="news-item__link">
 								<div class="news-item__title">Правительство не вернет сигарет</div>
-								<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								<div class="news-item__info">
+									<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+									<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								</div>
 							</a>
 						</li>
 						<li class="news-item">
 							<a href="#" class="news-item__link">
 								<div class="news-item__title">Правительство не вернет сигарет</div>
-								<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								<div class="news-item__info">
+									<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+									<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								</div>
 							</a>
 						</li>
 						<li class="news-item">
 							<a href="#" class="news-item__link">
 								<div class="news-item__title">Правительство не вернет сигарет</div>
-								<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
-								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								<div class="news-item__info">
+									<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
+									<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								</div>
 							</a>
 						</li>
 						<li class="news-item">
 							<a href="#" class="news-item__link">
 								<div class="news-item__title">Правительство не вернет сигарет</div>
-								<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
-								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								<div class="news-item__info">
+									<p>Решилась судьба читающих курильщиков. Правительство России отвергло предложение депутатов вернуть сигареты в ларьки «Печать»</p>
+									<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								</div>
 							</a>
 						</li>
 						<li class="news-item">
 							<a href="#" class="news-item__link">
 								<div class="news-item__title">Правительство не вернет сигарет</div>
-								<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
-								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								<div class="news-item__info">
+									<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
+									<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								</div>
 							</a>
 						</li>
 						<li class="news-item">
 							<a href="#" class="news-item__link">
 								<div class="news-item__title">Правительство не вернет сигарет</div>
-								<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
-								<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								<div class="news-item__info">
+									<p>Заработали новые временные нормы по приему пациентов в государственных поликлиниках. Минздрав РФ подчеркивает, что только рекомендует врачам ориентироваться на указанное время. Выгонять пациентов ведомство не просит</p>
+									<time class="meta">29 ОКТЯБРЯ, 20:27</time>
+								</div>
 							</a>
 						</li>
 					</ul>
