--- a/src/dislife-main-education.html
+++ b/src/dislife-main-education.html
@@ -10,73 +10,18 @@
 	//=include partials/header.html
 	<div class="container main-head">
 		<div class="main-head__info">
-			<div class="main-head__title">Маленькая политика</div>
-			<p>Все, что касается общества. Главные новости и ключевые темы социальной политики в России</p>
+			<div class="main-head__title">Образование</div>
+			<p>Все, что касается знаний. Главные новости и ключевые темы образования в России</p>
 		</div>
-		<div class="main-head__img" style="background-image: url(img/main-head-polytique.jpg);"></div>
+		<div class="main-head__img" style="background-image: url(img/main-head-education.jpg);"></div>
 	</div>
-	<div class="fullscreen fullscreen_yellow" style="background-image: url(img/fullheight-pic.jpg);">
+	<div class="fullscreen fullscreen_violet" style="background-image: url(img/fullheight-pic2.jpg);">
 		<div class="fullscreen__inner">
 			<div class="fullscreen__center">
-				<div class="slider">
-					<div class="slider__in js-slider">
-						<div class="slide">
-							<div class="slide__title">«Если было нужно, я кидалась табуретками в медсестер»</div>
-							<div class="slide__line"><span></span></div>
-							<div class="slide__author">
-								<div class="slide__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="slide__name">Наталия Кудрявцева</div>
-							</div>
-						</div>
-						<div class="slide">
-							<div class="slide__title">Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
-							<div class="slide__line"><span></span></div>
-							<div class="slide__author">
-								<div class="slide__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="slide__name">Наталия Кудрявцева</div>
-							</div>
-						</div>
-						<div class="slide">
-							<div class="slide__title">«Если было нужно, я кидалась табуретками в медсестер»</div>
-							<div class="slide__line"><span></span></div>
-							<div class="slide__author">
-								<div class="slide__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="slide__name">Наталия Кудрявцева</div>
-							</div>
-						</div>
-						<div class="slide">
-							<div class="slide__title">Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
-							<div class="slide__line"><span></span></div>
-							<div class="slide__author">
-								<div class="slide__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="slide__name">Наталия Кудрявцева</div>
-							</div>
-						</div>
-						<div class="slide">
-							<div class="slide__title">«Если было нужно, я кидалась табуретками в медсестер»</div>
-							<div class="slide__line"><span></span></div>
-							<div class="slide__author">
-								<div class="slide__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="slide__name">Наталия Кудрявцева</div>
-							</div>
-						</div>
-					</div>
-					<button class="slider__prev js-slider-prev"><i class="fa fa-angle-left"></i></button>
-					<button class="slider__next js-slider-next"><i class="fa fa-angle-right"></i></button>
-				</div>
 				<div class="fullscreen__info">
-					<div class="fullscreen__title">Государство мам</div>
-					<p>Для кого-то это просто странные и непонятные слова. Для знающих — названия страшных болезней.Для врачей — вызов. Для чиновников — обуза. Для мам детей, страдающих этими неизлечимыми заболеваниями, — это слова-враги и слова-спутники</p>
+					<div class="fullscreen__author">Ира Соломонова</div>
+					<div class="fullscreen__title">Школьная несправедливость</div>
+					<h4>Как богатеют директоры московских школ и на что при этом живут обычные учителя?</h4>
 				</div>
 			</div>
 		</div>
@@ -252,7 +197,7 @@
 				<h2 class="h2">Почитать еще</h2>
 				<div class="row">
 					<div class="col-items">
-						<div class="item item_gold item_mod">
+						<div class="item item_violet item_mod">
 							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
 								<div class="item__title">
 									<p class="item__author">Ира Соломонова</p>
@@ -270,7 +215,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<div class="item item_gold">
+						<div class="item item_violet">
 							<a href="#" class="item__in">
 								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
 								<div class="item__txt">
@@ -284,7 +229,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<div class="item item_gold item_mod">
+						<div class="item item_violet item_mod">
 							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
 								<div class="item__title">
 									<p class="item__author">Ира Соломонова</p>
@@ -302,7 +247,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<div class="item item_gold">
+						<div class="item item_violet">
 							<a href="#" class="item__in">
 								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
 								<div class="item__txt">
@@ -316,7 +261,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<blockquote class="blockquote blockquote_yellow">
+						<blockquote class="blockquote blockquote_violet">
 							<a href="#" class="blockquote__link">
 								<div class="blockquote__info">
 									<div>Наталья Семенова,</div>
@@ -329,7 +274,7 @@
 						</blockquote>
 					</div>
 					<div class="col-items">
-						<div class="item item_gold">
+						<div class="item item_violet">
 							<a href="#" class="item__in">
 								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
 								<div class="item__txt">
@@ -343,7 +288,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<div class="item item_gold item_mod">
+						<div class="item item_violet item_mod">
 							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
 								<div class="item__title">
 									<p class="item__author">Ира Соломонова</p>
