--- a/src/dislife-main-medicine.html
+++ b/src/dislife-main-medicine.html
@@ -10,102 +10,44 @@
 	//=include partials/header.html
 	<div class="container main-head">
 		<div class="main-head__info">
-			<div class="main-head__title">Маленькая политика</div>
-			<p>Все, что касается общества. Главные новости и ключевые темы социальной политики в России</p>
+			<div class="main-head__title">Образование</div>
+			<p>Все, что касается знаний. Главные новости и ключевые темы образования в России</p>
 		</div>
-		<div class="main-head__img" style="background-image: url(img/main-head-polytique.jpg);"></div>
+		<div class="main-head__img" style="background-image: url(img/main-head-medicine.jpg);"></div>
 	</div>
-	<div class="fullscreen fullscreen_yellow" style="background-image: url(img/fullheight-pic.jpg);">
+	<div class="fullscreen fullscreen_red" style="background-image: url(img/fullheight-pic3.jpg);">
 		<div class="fullscreen__inner">
 			<div class="fullscreen__center">
-				<div class="slider">
-					<div class="slider__in js-slider">
-						<div class="slide">
-							<div class="slide__title">«Если было нужно, я кидалась табуретками в медсестер»</div>
-							<div class="slide__line"><span></span></div>
-							<div class="slide__author">
-								<div class="slide__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="slide__name">Наталия Кудрявцева</div>
-							</div>
-						</div>
-						<div class="slide">
-							<div class="slide__title">Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
-							<div class="slide__line"><span></span></div>
-							<div class="slide__author">
-								<div class="slide__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="slide__name">Наталия Кудрявцева</div>
-							</div>
-						</div>
-						<div class="slide">
-							<div class="slide__title">«Если было нужно, я кидалась табуретками в медсестер»</div>
-							<div class="slide__line"><span></span></div>
-							<div class="slide__author">
-								<div class="slide__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="slide__name">Наталия Кудрявцева</div>
-							</div>
-						</div>
-						<div class="slide">
-							<div class="slide__title">Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
-							<div class="slide__line"><span></span></div>
-							<div class="slide__author">
-								<div class="slide__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="slide__name">Наталия Кудрявцева</div>
-							</div>
-						</div>
-						<div class="slide">
-							<div class="slide__title">«Если было нужно, я кидалась табуретками в медсестер»</div>
-							<div class="slide__line"><span></span></div>
-							<div class="slide__author">
-								<div class="slide__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="slide__name">Наталия Кудрявцева</div>
-							</div>
-						</div>
-					</div>
-					<button class="slider__prev js-slider-prev"><i class="fa fa-angle-left"></i></button>
-					<button class="slider__next js-slider-next"><i class="fa fa-angle-right"></i></button>
-				</div>
 				<div class="fullscreen__info">
-					<div class="fullscreen__title">Государство мам</div>
-					<p>Для кого-то это просто странные и непонятные слова. Для знающих — названия страшных болезней.Для врачей — вызов. Для чиновников — обуза. Для мам детей, страдающих этими неизлечимыми заболеваниями, — это слова-враги и слова-спутники</p>
+					<div class="fullscreen__author">Ира Соломонова</div>
+					<div class="fullscreen__title">Дети Гольяново</div>
 				</div>
 			</div>
+			<a href="#" class="info-block info-block_red">
+				<span class="info-block__arr"></span>
+				<div class="info-block__author">Инструкция</div>
+				<div class="info-block__title">Как правильно экономить на авиабилетах? Руководство к действию</div>
+				<div class="info-block__user">
+					<div class="info-block__img">
+						<img src="img/man-o.png" alt="">
+					</div>
+					<div class="info-block__text">
+						<p>Объясняет заслуженный учитель России, автор учебников по литературе Татьяна Иванцова</p>
+					</div>
+				</div>
+			</a>
 		</div>
 	</div>
 	<div class="container main-in">
 		<div class="row">
 			<div class="col-lg">
-				<div class="item item_gold item_mod item_big">
-					<a href="#" class="item__img" style="background-image: url(img/item-big.jpg)">
-						<div class="item__title">
-							<p class="item__author">Ира Соломонова</p>
-							<p class="item__subtitle">Дети Гольяново</p>
-							<p class="item__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
-						</div>
-						<span class="item__arr"></span>
-					</a>
-					<a href="#" class="item__txt">
-						<div class="item__txt-in">
-							<p class="item__instruction">Инструкция</p>
-							<p>Как правильно экономить на авиабилетах? Руководство к действию</p>
-							<div class="man">
-								<div class="man__img">
-									<img src="img/man-o.png" alt="">
-								</div>
-								<div class="man__text">Объясняет заслуженный учитель России, автор учебников по литературе Татьяна Иванцова</div>
-							</div>
-						</div>
-					</a>
-				</div>
+				<a href="#" class="item-full item-full_red" style="background-image: url(img/fullheight-pic2.jpg)">
+					<div class="item-full__title">
+						<p class="item-full__author">Ира Соломонова</p>
+						<p class="item-full__subtitle">Школьная несправедливость</p>
+						<p class="item-full__info">Почему воспитанникам детских домов не могут помочь ни взрослые, ни закон, и за что здоровых детей отправляют в психиатрические больницы</p>
+					</div>
+				</a>
 			</div>
 			<div class="col-xs">
 				<div class="social">
@@ -252,7 +194,7 @@
 				<h2 class="h2">Почитать еще</h2>
 				<div class="row">
 					<div class="col-items">
-						<div class="item item_gold item_mod">
+						<div class="item item_red item_mod">
 							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
 								<div class="item__title">
 									<p class="item__author">Ира Соломонова</p>
@@ -270,7 +212,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<div class="item item_gold">
+						<div class="item item_red">
 							<a href="#" class="item__in">
 								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
 								<div class="item__txt">
@@ -284,7 +226,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<div class="item item_gold item_mod">
+						<div class="item item_red item_mod">
 							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
 								<div class="item__title">
 									<p class="item__author">Ира Соломонова</p>
@@ -302,7 +244,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<div class="item item_gold">
+						<div class="item item_red">
 							<a href="#" class="item__in">
 								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
 								<div class="item__txt">
@@ -316,7 +258,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<blockquote class="blockquote blockquote_yellow">
+						<blockquote class="blockquote blockquote_red">
 							<a href="#" class="blockquote__link">
 								<div class="blockquote__info">
 									<div>Наталья Семенова,</div>
@@ -329,7 +271,7 @@
 						</blockquote>
 					</div>
 					<div class="col-items">
-						<div class="item item_gold">
+						<div class="item item_red">
 							<a href="#" class="item__in">
 								<div class="item__img" style="background-image: url(img/item.jpg)"></div>
 								<div class="item__txt">
@@ -343,7 +285,7 @@
 						</div>
 					</div>
 					<div class="col-items">
-						<div class="item item_gold item_mod">
+						<div class="item item_red item_mod">
 							<a href="#" class="item__img" style="background-image: url(img/item3.jpg)">
 								<div class="item__title">
 									<p class="item__author">Ира Соломонова</p>
