--- a/src/dislife-main-medicine.html
+++ b/src/dislife-main-medicine.html
@@ -10,8 +10,8 @@
 	//=include partials/header.html
 	<div class="container main-head">
 		<div class="main-head__info">
-			<div class="main-head__title">Образование</div>
-			<p>Все, что касается знаний. Главные новости и ключевые темы образования в России</p>
+			<div class="main-head__title">Здоровье</div>
+			<p>Все, что касается медицины. Главные новости и ключевые темы здравоохранения в России</p>
 		</div>
 		<div class="main-head__img" style="background-image: url(img/main-head-medicine.jpg);"></div>
 	</div>
